# groq-telegram-assistant

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  SHA256SUMS  THREAT_MODEL.md  VALIDATION.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: tests.yml
deploy/: install.sh  security-check.sh  telegram-assistant-bot.service  telegram-assistant-reminder.service  telegram-assistant-reminder.timer
docs/: ARCHITECTURE.md  GITHUB.md  RELEASE.md
src/telegram_assistant/: __init__.py  availability.py  bot.py  config.py  database.py  domain.py  llm.py  quota.py  reminder_worker.py  security.py  telegram_api.py
tests/: test_availability.py  test_bot.py  test_database.py  test_domain.py  test_llm.py  test_migration.py
tools/: discover_user_id.py
